# MemorChess

./: .dockerignore  .gitignore  BOOK_FEATURE_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  build.gradle.kts  docker-compose.yml  gradle.properties  manifest.json  renovate.json  settings.gradle.kts  validate.py
.fleet/: receipt.json
.github/: copilot-instructions.md  git-commit-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: check_translations.py  compare_benchmarks.py  extract_benchmark_summary.py  setup_secrets.sh  (+1 more)
.run/: Build.run.xml  Test All.run.xml  Web.run.xml
androidApp/: build.gradle.kts
buildSrc/: build.gradle.kts  gradle.properties
ci/: install-hooks.sh
composeApp/: .gitignore  build.gradle.kts  pre-compile.gradle.kts  secrets.gradle.kts
composeApp/src/commonAndroidJvmMain/jni/chess-engine/: CMakeLists.txt  jstockfish-lib.cpp
composeApp/src/commonAndroidJvmMain/jni/chess-engine/jstockfish/: misc_sync_cout.cpp
core/: build.gradle.kts
design-proposals/: 01-atelier-mobile.html  01-atelier.html  02-le-journal-mobile.html  02-le-journal.html  03-kinetic-mobile.html  03-kinetic.html  index.html  kinetic-base.css  kinetic-settings-desktop.html  kinetic-settings-mobile.html  kinetic-training-desktop.html  kinetic-training-mobile.html
gradle/: libs.versions.toml
macrobenchmark/: README.md  build.gradle.kts
microbenchmark/: README.md  build.gradle.kts
pgn/: caro-kann-black.pgn  london-system-white.pgn  scandinavian-black.pgn  vienna-gambit-white.pgn
runs/: 2026-06-12T07-17_e846124b.json  2026-06-12T09-30_e846124b.json  2026-06-12T09-38_e846124b.json  2026-06-12T09-47_e846124b.json  2026-06-12T09-56_e846124b.json  2026-06-12T10-04_c5c3ed5d.json  2026-06-12T10-13_c5c3ed5d.json  2026-06-12T10-23_c5c3ed5d.json  2026-06-12T10-48_e300f09d.json  2026-06-12T13-50_e300f09d.json  2026-06-12T14-09_e300f09d.json  2026-06-13T06-51_ac420a84.json  2026-06-14T07-19_74ae394b.json  2026-06-15T08-52_86e8c0b4.json  2026-06-16T08-44_86e8c0b4.json  2026-06-17T08-26_13f09e84.json  2026-06-18T07-30_13f09e84.json  2026-06-19T08-30_13f09e84.json  2026-06-20T06-59_13f09e84.json  2026-06-21T07-29_13f09e84.json  2026-06-22T08-53_716b6f18.json  2026-06-23T06-45_716b6f18.json  2026-06-24T06-40_716b6f18.json  2026-06-25T06-44_1d4fe396.json  2026-06-26T06-48_1d4fe396.json  2026-06-27T06-25_3de1c260.json  2026-06-28T06-58_3de1c260.json  2026-06-29T07-26_540128b0.json  2026-06-30T06-49_540128b0.json  2026-07-01T07-08_540128b0.json  2026-07-02T06-34_540128b0.json
server/: .gitignore  Dockerfile  build.gradle.kts
shared/: build.gradle.kts
testing/: build.gradle.kts
(+1023 files in other folders)
